fixed search bar and menu options on mobile sidebar

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -20,6 +20,11 @@ nav .input-field{
     height: auto;
 }
 
+.mobile_navbar_search{
+    padding-left: 2rem;
+    max-width:90%;
+}
+
 /* from Bulma */
 .icon {
     align-items: center;
